--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -620,4 +620,6 @@
     <string name="personalid_otp_verification_failed">Verification failed and please try again</string>
     <string name="personalid_location_permission_error">Location permission denied</string>
     <string name="personalid_location_service_error">Location service is not available. Please enable it</string>
+    <string name="personalid_grant_location_permission">Grant Location Permission</string>
+    <string name="personalid_grant_location_service">Enable Location Service</string>
 </resources>
