--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -423,6 +423,8 @@
     <string name="personalid_otp_missing_activity">Algo deu errado</string>
     <string name="personalid_otp_verification_failed_generic">Falha na verificação do OTP:</string>
     <string name="personalid_otp_verification_failed">A verificação falhou. Tente novamente.</string>
+    <string name="personalid_messaging_menu_title">Mensagens</string>
+    <string name="personalid_sync_menu_title">Sincronizar</string>
     <string name="connect_registration_subtitle">Introduza o seu número de telefone</string>
     <string name="connect_recovery_button_phone">Continuar</string>
     <string name="connect_messaging_title">Mensagens</string>
