--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -620,6 +620,8 @@
     <string name="personalid_otp_missing_activity">Something went wrong</string>
     <string name="personalid_otp_verification_failed_generic">OTP verification failed:</string>
     <string name="personalid_otp_verification_failed">Verification failed and please try again</string>
+    <string name="personalid_messaging_menu_title">Messaging</string>
+    <string name="personalid_sync_menu_title">Sync</string>
     <string name="camera_permission_title">Permission for camera</string>
     <string name="camera_permission_msg">In order to take a picture, CommCare needs permission to use your device camera.</string>
     <string name="capture_photo">Capture Photo</string>
