--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -608,7 +608,9 @@
     <string name="personalid_this_is_not_me"><u>This is not me</u></string>
     <string name="personalid_welcome_back_msg">Welcome back %s</string>
     <string name="personalid_recovery_failed_title">Recovery failed</string>
+    <string name="personalid_recovery_lockout_title">Account Locked</string>
     <string name="personalid_recovery_failed_message">Looks like you’ve forgotten your Backup Code, we’re creating a new account for you</string>
+    <string name="personalid_recovery_lockout_message">You have entered the wrong Backup Code too many times and your account has been locked.</string>
     <string name="personalid_wrong_backup_message">You entered the wrong Backup Code, please try again. You will need to create a new account after %d more incorrect attempts.</string>
     <string name="personalid_camera_permission_title">Permission for camera</string>
     <string name="personalid_camera_permission_msg">In order to take a picture, CommCare needs permission to use your device camera.</string>
