- Added hindi language translation

--- a/app/res/values-hi/strings.xml
+++ b/app/res/values-hi/strings.xml
@@ -24,7 +24,8 @@
     <string name="media_verified">मीडिया सत्यापित!</string>
     <string name="no_installation">कोई ऐप इंस्टॉल नहीं किया गया था!</string>
     <string name="migration_definite_failure">CommCare एक अपग्रेड के लिए आपके ऐप डेटा को माइग्रेट करने में असमर्थ था। इस समस्या को हल करने के लिए, कृपया अपने डिवाइस से CommCare को अनइंस्टॉल करें और फिर इसे फिर से लॉन्च करें।</string>
-    <string name="migration_possible_failure">CommCare एक एप्लिकेशन अपग्रेड के दौरान आपके सभी डेटा को माइग्रेट करने में असमर्थ था। इसे ठीक करने का प्रयास करने के लिए कृपया CommCare को पुनरारंभ करें। यदि यह संदेश बना रहता है, तो आपको अपने डिवाइस के सेटिंग मेनू में CommCare के लिए \'डेटा साफ़ करें\' की आवश्यकता हो सकती है।</string>    <string name="multiple_apps_limit_message">आप इंस्टॉल किए गए ऐप्स की अपनी सीमा तक पहुँच चुके हैं; आप एक बार में अधिकतम %s ऐप्स इंस्टॉल कर सकते हैं।\n\nयदि आप एक नया ऐप इंस्टॉल करना चाहते हैं, तो आप पहले एक मौजूदा ऐप को अनइंस्टॉल कर सकते हैं, जो ऐप मैनेजर से किया जा सकता है।</string>
+    <string name="migration_possible_failure">CommCare एक एप्लिकेशन अपग्रेड के दौरान आपके सभी डेटा को माइग्रेट करने में असमर्थ था। इसे ठीक करने का प्रयास करने के लिए कृपया CommCare को पुनरारंभ करें। यदि यह संदेश बना रहता है, तो आपको अपने डिवाइस के सेटिंग मेनू में CommCare के लिए \'डेटा साफ़ करें\' की आवश्यकता हो सकती है।</string>
+    <string name="multiple_apps_limit_message">आप इंस्टॉल किए गए ऐप्स की अपनी सीमा तक पहुँच चुके हैं; आप एक बार में अधिकतम %s ऐप्स इंस्टॉल कर सकते हैं।\n\nयदि आप एक नया ऐप इंस्टॉल करना चाहते हैं, तो आप पहले एक मौजूदा ऐप को अनइंस्टॉल कर सकते हैं, जो ऐप मैनेजर से किया जा सकता है।</string>
     <string name="back_to_manager">ऐप मैनेजर पर वापस जाएं</string>
     <string name="go_to_manager">ऐप मैनेजर पर जाएं</string>
     <string name="claim_privilege_button_text">विशेषाधिकारों का दावा करें</string>
