--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -188,7 +188,7 @@
     <string name="connect_button_logged_in">Ir al menú Conectar</string>
     <string name="personalid_generic_error">Ocurrió un problema con la base de datos, recupera tu cuenta.</string>
     <string name="connect_registration_title">Registro de PersonalId</string>
-    <string name="connect_consent_message_1">He leído y acepto la política de privacidad, los términos de servicio, el acuerdo comercial y la política de uso aceptable de Dimagi.</string>
+    <string name="connect_consent_message_1">He leído y acepto la <a href="https://www.dimagi.com/terms/latest/privacy/">Política de Privacidad</a>, los <a href="https://www.dimagi.com/terms/latest/tos/">Términos de Servicio</a>, el <a href="https://www.dimagi.com/terms/latest/ba/">Acuerdo Comercial</a> y la <a href="https://www.dimagi.com/terms/latest/aup/">Política de Uso Aceptable</a> de Dimagi.</string>
     <string name="connect_phone_country_code_default">+1</string>
     <string name="connect_phone_number_hint">0000000000</string>
     <string name="connect_otp_sent">OTP enviado</string>
