--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -250,7 +250,7 @@ License.
     <string name="connect_button_logged_in">Accéder au menu Connecter</string>
     <string name="personalid_generic_error">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
     <string name="connect_registration_title">Inscription PersonalId</string>
-    <string name="connect_consent_message_1">J\'ai lu et j\'accepte la politique de confidentialité, les conditions de service, l\'accord commercial et la politique d\'utilisation acceptable de Dimagi.</string>
+    <string name="connect_consent_message_1">J\'ai lu et j\'accepte la <a href="https://www.dimagi.com/terms/latest/privacy/">politique de confidentialité</a>, les <a href="https://www.dimagi.com/terms/latest/tos/">conditions de service</a>, l\'<a href="https://www.dimagi.com/terms/latest/ba/">accord commercial</a> et la <a href="https://www.dimagi.com/terms/latest/aup/">politique d\'utilisation acceptable</a> de Dimagi.</string>
     <string name="connect_phone_country_code_default">+1</string>
     <string name="connect_phone_number_hint">0000000000</string>
     <string name="connect_otp_sent">OTP envoyé</string>
