--- a/app/res/values-no/strings.xml
+++ b/app/res/values-no/strings.xml
@@ -74,4 +74,6 @@
     <string name="no_gps_title">Location Data Disabled</string>
     <string name="no_gps_message">The location providers on this device are currently disabled. Do you want to change those settings?</string>
     <string name="change_settings">Change Settings</string>
+    <string name="you">Du</string>
+    <string name="them">Dem</string>
 </resources>
