--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -425,6 +425,8 @@
     <string name="connect_messaging_retrieve_messages_fail">መልእኽትታት ምምላስ ኣይከኣለን</string>
     <string name="connect_send_message_hint">መልእኽቲ ጽሓፍ</string>
     <string name="connect_send_message_btn_desc">መልእኽቲ ንምልኣኽ ኣብዚ ጠውቑ</string>
+    <string name="you">ንስኻ</string>
+    <string name="them">ንሶም</string>
     <string name="connect_corrupt_job_text">ነዚ ዕድል ክጽዕን ኣይከኣለን</string>
     <string name="connect_results_summary_pending">ኣብ ከይዲ</string>
     <string name="connect_results_summary_rejected">ተነጺጉ</string>
