--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -328,8 +328,8 @@
     <string name="no_gps_title">Location Data Disabled</string>
     <string name="no_gps_message">The location providers on this device are currently disabled. Do you want to change those settings?</string>
     <string name="change_settings">Change Settings</string>
-    <string name="you">Tú</string>
-    <string name="them">Ellos</string>
+    <string name="connect_message_you">Tú</string>
+    <string name="connect_message_them">Ellos</string>
     <string name="connect_progress_warning_max_reached_single">Has alcanzado el número máximo de visitas. No podrás progresar en trabajos adicionales.</string>
     <string name="connect_progress_warning_daily_max_reached_single">Has alcanzado el número máximo de visitas para hoy. No podrás progresar en trabajos adicionales.</string>
     <string name="connect_progress_warning_max_reached_multi">Has alcanzado el número máximo de visitas para %s.</string>
